data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
int strncmp (const char *, const char *, size_t);
size_t strlen (const char *);
typedef unsigned int UINT32;
typedef UINT32 size_t;
char *realpath (const char *restrict, char *restrict);
__attribute__((const))
int *__errno_location(void);
extern int snprintf_s(char *strDest, size_t destMax, size_t count, const char *format,
                           ...) ;
int dlclose(void *);
char *dlerror(void);
void *dlopen(const char *, int);
void *dlsym(void *restrict, const char *restrict);
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));
void *OsalMemCalloc(size_t size);
void OsalMemFree(void *mem);