data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/host__25c1898e1626/.c2r_bindgen_extern/hdf_load_vdi_192c31c5.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn dlclose(arg1: *mut ::core::ffi::c_void) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn dlerror() -> *mut ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn dlopen(
        arg1: *const ::core::ffi::c_char,
        arg2: ::core::ffi::c_int,
    ) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn dlsym(
        arg1: *mut ::core::ffi::c_void,
        arg2: *const ::core::ffi::c_char,
    ) -> *mut ::core::ffi::c_void;
}
pub type size_t = ::core::ffi::c_uint;
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_APP: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_KMSG: LogType = 4;
pub const LOG_ONLY_PRERELEASE: LogType = 5;
pub const LOG_TYPE_MAX: LogType = 6;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_LEVEL_MIN: LogLevel = 0;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub const LOG_LEVEL_MAX: LogLevel = 8;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn strncmp(
        arg1: *const ::core::ffi::c_char,
        arg2: *const ::core::ffi::c_char,
        arg3: size_t,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn strlen(arg1: *const ::core::ffi::c_char) -> size_t;
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
unsafe extern "C" {
    pub fn realpath(
        arg1: *const ::core::ffi::c_char,
        arg2: *mut ::core::ffi::c_char,
    ) -> *mut ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn __errno_location() -> *mut ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn snprintf_s(
        strDest: *mut ::core::ffi::c_char,
        destMax: size_t,
        count: size_t,
        format: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
